workloads/gitops/flux-receiver/02-ingress-flux-webhook.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    io.seedmatic.rke2lab/domain: gitops
    io.seedmatic.rke2lab/package: flux-receiver
    tailscale.com/funnel: "true"
    tailscale.com/proxy-class: nikopol-mgmt-flux-webhook
  name: flux-webhook
  namespace: flux-system
spec:
  defaultBackend:
    service:
      name: webhook-receiver
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - nikopol-mgmt-flux-webhook
